Change test invocation to work around phpunit issue
see: https://github.com/sebastianbergmann/phpunit/issues/279

Somehow have the issue on local Solus but not on Travis.

--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,6 @@
         "psr-0": { "ArchieML": "" }
     },
     "scripts": {
-        "test": "phpunit ArchieMLTest"
+        "test": "phpunit ArchieMLTest.php"
     }
 }
